--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,13 @@ chardet==3.0.4
 docopt==0.6.2
 idna==2.7
 nose==1.3.7
+numpy==1.15.3
+pandas==0.23.4
 pipreqs==0.4.9
+python-dateutil==2.7.5
+pytz==2018.7
 requests==2.20.0
+scipy==1.1.0
+six==1.11.0
 urllib3==1.24
 yarg==0.1.9
