--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,12 @@ pandas==0.23.4
 pipreqs==0.4.9
 python-dateutil==2.7.5
 pytz==2018.7
+PyYAML==3.13
 requests==2.20.0
 scipy==1.1.0
 six==1.11.0
+toml==0.10.0
 urllib3==1.24
+xmltodict==0.11.0
 yarg==0.1.9
+yq==2.7.0
